Bug#97191 Prepared Statements when using ODBC / ClassicASP always return 0 for INT values